--- a/app/src/main/res/layout/account_card.xml
+++ b/app/src/main/res/layout/account_card.xml
@@ -3,16 +3,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:padding="5dp">
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        android:elevation="4dp">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="4dp"
            >
 
                  <ImageView
@@ -20,8 +22,9 @@
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:src="@drawable/ic_account_balance_wallet_black_24dp"
-                     android:layout_marginTop="20dp"
-                     android:layout_marginBottom="20dp"
+                     android:layout_alignParentLeft="true"
+                     android:layout_alignParentStart="true"
+                     android:layout_alignParentTop="true"
                      android:layout_centerVertical="true"
                      />
 
@@ -32,9 +35,11 @@
                     android:digits="123456789 -."
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"
-                   android:layout_marginLeft="30dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_toEndOf="@+id/imageCard"
+                    android:layout_toRightOf="@+id/imageCard"
                     android:textColor="#000"
                     android:textSize="20dp"
                     android:text="Name Account: "
@@ -44,17 +49,30 @@
                     android:id="@+id/tvBalancSumm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:layout_alignParentRight="true"
+
+                    android:layout_toEndOf="@+id/nameAccount"
+                    android:layout_toRightOf="@+id/nameAccount"
+
                     android:text="Balance Sum: "
                     android:textSize="20dp"
                     android:textStyle="bold"
                     android:textColor="#32CD32"
                      />
+            <TextView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:id="@+id/txtOptionDigit"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_below='@id/tvBalancSumm'
+                android:paddingLeft="10dp"
+                android:textAppearance="?android:textAppearanceLarge"
+                android:textColor="#000"
+                android:text="@string/vertical_ellipsis"/>
 
+        </RelativeLayout>
 
-        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
