--- a/app/src/main/res/layout/info_accountbook.xml
+++ b/app/src/main/res/layout/info_accountbook.xml
@@ -1,20 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:id="@+id/layoutTitleInfoAcc"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_centerHorizontal="true"
+    android:elevation="4dp">
+
+
     <TextView
-        android:id="@+id/text"
+        android:id="@+id/textTitelInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ИНФО"
+        android:text="Ваш счет"
         android:layout_centerHorizontal="true"
         android:paddingTop="20dp"
         android:textColor="@color/colorPrimaryDark"
        />
         <TextView
+            android:id="@+id/tvSumAccInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            />
+            android:text="summa"
+            android:paddingLeft="30dp" />
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/layoutListViewInfo"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/layoutTitleInfoAcc"
+        android:isScrollContainer="true">
+
+        <ListView
+            android:id="@+id/lvAccountInfo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+           >
+
+        </ListView>
+    </LinearLayout>
 
 </RelativeLayout>
