--- a/app/src/main/res/layout/add_incom.xml
+++ b/app/src/main/res/layout/add_incom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/add_incom_container"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
     <!--layoutDateTime-->
@@ -66,6 +67,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp"
+
         android:orientation="horizontal"
         android:background="@drawable/customborder">
 
@@ -91,6 +93,24 @@
 
             </Spinner>
 
+
+
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/layoutImgButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:layout_centerHorizontal="true">
+
+            <ImageButton
+                android:id="@+id/imageButtonAddIncomCategory"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:background="#fff"
+                android:src="@drawable/ic_add_category_point"
+                />
         </LinearLayout>
 
     </LinearLayout>
@@ -200,21 +220,28 @@
     <!-- end layoutComment-->
     <!-- layoutButtonADD-->
 
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_below="@+id/layoutIncomComment"
+    android:layout_centerHorizontal="true"
+    >
+
 
     <Button
         android:id="@+id/btnSaveIncom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/layoutIncomComment"
+
         android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
+
         android:background="@drawable/round_button_incom"
         android:text="Сохранить"
         android:textColor="@android:color/white" />
 
 
     <!-- end layoutButtonADD-->
-
+</LinearLayout>
 
 
 </RelativeLayout>
