--- a/app/src/main/res/layout/activity_add_account_book.xml
+++ b/app/src/main/res/layout/activity_add_account_book.xml
@@ -28,6 +28,7 @@
                 android:singleLine="true"
                 android:hint= "Name Account" />
         </android.support.design.widget.TextInputLayout>
+
         <android.support.design.widget.TextInputLayout
             android:id="@+id/layoutBalansSum"
             android:layout_width="match_parent"
@@ -39,10 +40,12 @@
                 android:layout_height="wrap_content"
                 android:singleLine="true"
                 android:hint= "Sum"
+                android:digits="0123456789."
                 android:inputType="numberDecimal"/>
 
 
         </android.support.design.widget.TextInputLayout>
+
         <Button android:id="@+id/saveBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
