added icon date and time incom

--- a/app/src/main/res/layout/add_incom_accoutn_fragment.xml
+++ b/app/src/main/res/layout/add_incom_accoutn_fragment.xml
@@ -2,12 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:layout_marginTop="16dp"
+    android:layout_marginBottom="4dp"
     android:layout_marginLeft="4dp"
     android:layout_marginRight="4dp"
-    android:layout_marginBottom="4dp"
+    android:layout_marginTop="16dp"
     android:background="#f0f0f0"
+    android:orientation="vertical"
 
     >
 
@@ -17,40 +17,40 @@
         android:orientation="vertical">
 
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/layoutAddIcommAccount"
-        android:layout_marginTop="48dp"
-        android:layout_marginBottom="8dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <EditText
-            android:id="@+id/add_incom_accout_name"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/layoutAddIcommAccount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:hint="Наименование счета "
-            android:inputType="text"
-            android:singleLine="true" />
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="48dp">
+
+            <EditText
+                android:id="@+id/add_incom_accout_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:hint="Наименование счета "
+                android:inputType="text"
+                android:singleLine="true" />
 
 
-    </android.support.design.widget.TextInputLayout>
+        </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
 
 
             android:id="@+id/layoutAddIcommAccountSumm"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="24dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
+            android:layout_marginTop="8dp">
 
             <EditText
                 android:id="@+id/add_incom_sum_account"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:hint="Сумма  "
+                android:hint="Сумма на счете  "
                 android:inputType="numberDecimal"
                 android:singleLine="true" />
 
@@ -58,6 +58,7 @@
         </android.support.design.widget.TextInputLayout>
 
     </LinearLayout>
+
     <Button
 
         android:id="@+id/btnAddIncomAccount"
@@ -74,7 +75,6 @@
         android:textColor="@android:color/white"
 
         />
-
 
 
 </LinearLayout>
