--- a/app/src/main/res/layout/add_incom.xml
+++ b/app/src/main/res/layout/add_incom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="#f0f0f0"
     android:id="@+id/add_incom_container"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
@@ -20,38 +21,63 @@
             android:layout_height="match_parent"
             android:orientation="horizontal"
             android:layout_gravity="center_horizontal"
+
             android:clickable="true"
             android:onClick="setIncomDate"
             android:layout_weight="1">
 
+
+
             <TextView
                 android:id="@+id/addDataIncom"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:gravity="center"
                 android:textSize="18dp"
+                android:layout_marginVertical="12dp"
                 android:text="Дата"
                 android:textColor="@color/colorPrimaryDark"/>
+
+            <ImageButton
+
+            android:id="@+id/addDataIncomImg"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginLeft="24dp"
+                android:background="#f0f0f0"
+            android:src ="@drawable/ic_date_range_blue_24dp"
+            />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/layoutIncomTime"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_gravity="center_horizontal"
+
             android:clickable="true"
             android:onClick="setIncomTime"
-            android:layout_weight="1"
-
-            android:layout_gravity="center_horizontal"  >
+            android:layout_weight="1">
 
             <TextView
                 android:id="@+id/addTimeIncom"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="12dp"
                 android:gravity="center"
                 android:textSize="18dp"
                 android:text="Время"
                 android:textColor="@color/colorPrimaryDark"/>
+
+            <ImageButton
+
+                android:id="@+id/addTimeIncomImg"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginLeft="24dp"
+                android:src ="@drawable/ic_access_time_blue_24dp"
+                />
 
         </LinearLayout>
 
@@ -193,7 +219,7 @@
                 android:id="@+id/imageButtonAddIncomAccount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="#fff"
+                android:background="#f0f0f0"
                 android:src="@drawable/ic_add_category_point"
                 />
         </LinearLayout>
