--- a/app/src/main/res/layout/add_incom.xml
+++ b/app/src/main/res/layout/add_incom.xml
@@ -76,6 +76,7 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_marginLeft="24dp"
+                android:background="#f0f0f0"
                 android:src ="@drawable/ic_access_time_blue_24dp"
                 />
 
@@ -93,7 +94,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp"
-
         android:orientation="horizontal"
         android:background="@drawable/customborder">
 
@@ -114,6 +114,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:paddingRight="16dp"
+
                 android:spinnerMode="dropdown"
                >
 
@@ -127,13 +128,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:layout_centerHorizontal="true">
+             android:layout_centerHorizontal="true">
 
             <ImageButton
                 android:id="@+id/imageButtonAddIncomCategory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="#fff"
+                android:background="#f0f0f0"
                 android:src="@drawable/ic_add_category_point"
                 />
         </LinearLayout>
