--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -7,7 +7,7 @@
         android:id="@+id/filterSpinner"
         android:title="Filter Spinner"
         app:actionViewClass="android.widget.Spinner"
-        android:background="#fff"
+        android:background= "#000"
         app:showAsAction="always" />
 
     <item
