--- a/app/src/main/res/layout/account_card.xml
+++ b/app/src/main/res/layout/account_card.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="5dp">
+    android:padding="5dp"
+    >
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -15,7 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="4dp"
-           >
+
+            >
 
                  <ImageView
                      android:id="@+id/imageCard"
@@ -40,7 +42,7 @@
                     android:layout_marginStart="20dp"
                     android:layout_toEndOf="@+id/imageCard"
                     android:layout_toRightOf="@+id/imageCard"
-                    android:textColor="#000"
+                    android:textColor="#fff"
                     android:textSize="20dp"
                     android:text="Name Account: "
                      />
