--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="#FFF">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -14,7 +15,7 @@
 
         <RelativeLayout
             android:id="@+id/layoutCard"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1">
 
@@ -23,9 +24,9 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content" />
 
-            </android.support.v7.widget.RecyclerView>
+
         </RelativeLayout>
 
         <RelativeLayout
@@ -97,6 +98,6 @@
 
     </RelativeLayout>
 
-
+    <include layout="@layout/toolbar" />
 
 </LinearLayout>
