--- a/app/src/main/res/layout/item_acc_book_info.xml
+++ b/app/src/main/res/layout/item_acc_book_info.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="horizontal"
     android:padding="2dp">
 
@@ -10,7 +13,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="4dp">
+        android:padding="40dp"
+        android:background="#fff0">
 
 
         <TextView
@@ -53,4 +57,4 @@
     </RelativeLayout>
 
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
