--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="@style/Base.Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!--<style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">-->
         <!--<item name="colorPrimaryDark">@color/status_bar_orange</item>-->
         <item name="searchViewStyle">@style/AppSearchViewStyle</item>
